k8s/phpdemo/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpdemo
spec:
  type: NodePort
  selector:
    app: phpdemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30123
