k8s/phpdemo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpdemo
  labels:
    name: phpdemo
spec:
  rules:
  - host: phpdemo.hostname.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpdemo
            port: 
              number: 80
